@@ -3,6 +3,7 @@ etc
 lib				[linux-any]
 usr/lib/accountsservice
 usr/share/dbus-1
+usr/share/language-tools
 usr/share/locale
 usr/share/polkit-1
 var
